# BetterLViT

./: .gitignore  2026-05-06-120253-eppadicepred-0.txt  CLAUDE.md  Config.py  Load_Dataset.py  Train_one_epoch.py  pyproject.toml  requirements.txt  test_model.py  train_model.py  utils.py
betterlvit/: config.py  io.py  losses.py  metrics.py  notify.py  run_dir.py  schedulers.py
betterlvit/data/: dataset.py
betterlvit/engine/: train_loop.py
betterlvit/models/: better_lvit.py  eppa.py  lvit.py  pixlevel.py  unet.py  vit.py
docs/: EPPA.md  Innovations.md
nets/: BetterLViT.py  LViT.py  Vit.py  cross_attn.py  cxr_bert_encoder.py  eppa.py
scripts/: diagnose_eppa.py  test.py  train.py
tool/: move_val_data.py
