[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "betterlvit"
version = "0.1.0"
description = "BetterLViT: USYD Dissertation-A research fork of LViT for medical image segmentation."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["betterlvit*"]
